# autorefine

./: README.md  SKILL.md  improve.md  pyproject.toml
phase1/: 1_manual_audit.md  3_label.py  4_validate_judge.py  test_label.py
phase2/: run.py  test_flow.py  test_unit.py
